# tree-sitter-bison

./: CHANGELOG.md  CHANGELOG_OF_THIS_FORK.md  CMakeLists.txt  COPYING.MIT  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  README.org  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  release-plz.toml  setup.py  tree-sitter.json
.github/workflows/: release-plz.yml
bindings/c/: tree-sitter-bison.pc.in
bindings/c/tree_sitter/: tree-sitter-bison.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bison/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBisonTests/: TreeSitterBisonTests.swift
queries/: injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: bash.txt  complete.txt
